--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "dependencies": {
     "docusign-esign": "^4.0.2",
     "express": "^4.16.3",
-    "fs": "0.0.1-security",
+    "fs": "0.0.1-security"
   }
 }
